<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".SpecificLeaderboard">

    <TextView
        android:id="@+id/specificLeaderboardTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:background="@color/titleBackground"
        android:gravity="center"
        android:text="@string/specificLeaderTitle"
        android:maxWidth="260dp"
        android:textColor="@color/titleTextBackground"
        android:textSize="36sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/specificLeaderboardHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/buttonBackground"
        android:contentDescription="@string/returnHome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />



    <Button
        android:id="@+id/specificLeaderboardReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/buttonBackground"
        android:minWidth="154.21dp"
        android:minHeight="55.45dp"
        android:text="@string/returnButtonText"
        android:textAllCaps="false"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ScrollView
        android:layout_width="351dp"
        android:layout_height="384dp"
        app:layout_constraintBottom_toTopOf="@+id/specificLeaderboardReturnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specificLeaderboardTitleText">

        <TableLayout
            android:id="@+id/specificLeaderboardTable"
            android:layout_width="351dp"
            android:layout_height="384dp"
            android:layout_marginBottom="36dp"
            android:background="@color/appBackground"
            android:stretchColumns="1">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="31dp"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:text="#"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:text="Name"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="112dp"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:text="Score"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp" />

                <TextView
                    android:layout_width="88dp"
                    android:layout_height="40dp"
                    android:background="@drawable/border"
                    android:text="Time"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="28sp" />
            </TableRow>
        </TableLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>