<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2A2A49"
    tools:context=".ModeSelect">

    <ImageButton
        android:id="@+id/ModeSelectHomeButton"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/buttonBackground"
        android:contentDescription="@string/returnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/modeSelectOk"
        app:layout_constraintHorizontal_bias="0.455"
        app:layout_constraintStart_toEndOf="@+id/ModeToInfoReturn"
        app:layout_constraintTop_toBottomOf="@+id/mode100"
        app:layout_constraintVertical_bias="0.698"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/home_button" />

    <TextView
        android:id="@+id/ModeSelectTitle"
        android:layout_width="363dp"
        android:layout_height="88dp"
        android:background="#AC9132"
        android:gravity="center"
        android:text="@string/mode_select"
        android:textAlignment="center"
        android:textColor="#25115F"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <Button
        android:id="@+id/mode10"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_marginTop="56dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/easy"
        android:textColor="#FFFFFF"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/mode20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ModeSelectTitle"
        app:layout_constraintVertical_bias="0.968" />

    <Button
        android:id="@+id/mode20"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/normal"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/mode30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mode30"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/medium"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/mode40"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mode40"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/hard"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/mode50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mode50"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/very_hard"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/mode100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/mode100"
        android:layout_width="300dp"
        android:layout_height="73dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/insane"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/modeSelectOk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/ModeToInfoReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/returnButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/modeSelectOk"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/modeSelectOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/buttonBackground"
        android:text="@string/okButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="301dp"
        android:layout_height="34dp"
        android:text="@string/pick_your_difficulty"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/mode10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ModeSelectTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>