...
        android:textSize="24sp"
        android:textColor = "@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timer" />

    <TextView
        android:id="@+id/questionAnswerUserGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Username"
        android:textAlignment="center"
        android:textColor="@color/white"
...
