<resources>
    <string name="app_name">Star Quiz</string>
    <string name="returnButtonText">Return</string>
    <string name="okButtonText">OK</string>
    <string name="descriptionInfo_rules">
        Overview: Test your Video Game knowledge across all historical accounts.
        Race against time, answer correctly, and rack up points.
        Learn about lifeline mechanics in the next page.
        Each category is scaled by difficulty, leaving the last category at the bottom to challenge yourself.
        Earn more points depending on the difficulty of the Questions.
...
